--- a/src/test/resources/allure.properties
+++ b/src/test/resources/allure.properties
@@ -1,4 +1,4 @@
 allure.results.directory=target/allure-results
-allure.link.mylink.pattern=https://dev.mobizone.cn:8080/Team01ProjectCollection/xqTest/_queries
+allure.link.mylink.pattern=https://blog.csdn.net/lmarster?type=sub&subType=watch
 allure.link.issue.pattern=https://example.org/issue/{}
 allure.link.tms.pattern=https://example.org/tms/{}
