--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.rootLogger = debug,stdout,D,E
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS}ms, [%t]:%m%n
+log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{HH:mm:ss,SSS}ms, [%t]:%m%n
 
 ### 输出DEBUG 级别以上的日志到=D://logs/error.log ###
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
