--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,18 @@
             <version>1.7.25</version>
             <scope>test</scope>
         </dependency>
+        <!-- jackson 读取jason内容-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.0</version>
+        </dependency>
+        <!-- yaml读取-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.12.0</version>
+        </dependency>
 
 
 
